Data Files Updated
I forgot these were things...

--- a/data/culture.yml
+++ b/data/culture.yml
@@ -1,68 +1,58 @@
-#
-# This file contains any settings relevent to culture.
-# This includes culture levels for towns.
-#
-#
-
 # culture to beaker conversion ratio.
 beakers_per_culture: 0.1
-
-# Culture levels for towns
-# level: - this entries' level number
-# amount - amount of culture needed for this level
-# chunks - number of chunks(radius from each edge town block) of culture granted for this level
-
+#When you have this culture, you level up your borders.
 culture_levels:
     - level: 0
       amount: 0
-      chunks: 6
- 
+      chunks: 5
+#
     - level: 1
-      amount: 500
-      chunks: 8
-           
+      amount: 1000
+      chunks: 7
+#
     - level: 2
-      amount: 10000
-      chunks: 10
-    
+      amount: 15000
+      chunks: 9
+#
     - level: 3
-      amount: 20000
-      chunks: 13
-    
+      amount: 67500
+      chunks: 11
+#
     - level: 4
-      amount: 100000
-      chunks: 15
-
-    - level: 5
       amount: 250000
+      chunks: 14
+#
+    - level: 5
+      amount: 625000
       chunks: 17
-
+#
     - level: 6
-      amount: 500000
-      chunks: 19
-
-    - level: 7
       amount: 1000000
-      chunks: 22
-
+      chunks: 20
+#
+    - level: 7
+      amount: 1500000
+      chunks: 23
+#
     - level: 8
       amount: 2000000
       chunks: 26
- 
+#
     - level: 9
-      amount: 4000000
-      chunks: 32
-    
+      amount: 3250000
+      chunks: 31
+#
     - level: 10
-      amount: 5000000
-      chunks: 40
-
+      amount: 4000000
+      chunks: 35
+#Stats for culture chunks.
 culture_biomes:
     - name: OCEAN
       coins: 0.0
       hammers: 0.5
       growth: 0.25
       happiness: 0.02
+      safety: 0.02
       beakers: 1.0
 
     - name: DEEP_OCEAN
@@ -70,6 +60,7 @@ culture_biomes:
       hammers: 0.5
       growth: 0.25
       happiness: 0.0
+      safety: 0.02
       beakers: 1.5
 
     - name: SMALL_MOUNTAINS
@@ -77,6 +68,7 @@ culture_biomes:
       hammers: 2.5
       growth: 0.5
       happiness: 0.015
+      safety: 0.02
       beakers: 0.5
 
     - name: PLAINS
@@ -84,6 +76,7 @@ culture_biomes:
       hammers: 0.25
       growth: 2.0
       happiness: 0.025
+      safety: 0.02
       beakers: 0.5
 
     - name: SUNFLOWER_PLAINS
@@ -91,6 +84,7 @@ culture_biomes:
       hammers: 1.0
       growth: 1.5
       happiness: 0.04
+      safety: 0.02
       beakers: 1.0
 
     - name: SAVANNA
@@ -98,6 +92,7 @@ culture_biomes:
       hammers: 1.0
       growth: 1.5
       happiness: 0.03
+      safety: 0.02
       beakers: 1.0
 
     - name: SAVANNA_PLATEAU
@@ -105,6 +100,7 @@ culture_biomes:
       hammers: 1.25
       growth: 1.25
       happiness: 0.025
+      safety: 0.02
       beakers: 1.0
 
     - name: MESA
@@ -112,6 +108,7 @@ culture_biomes:
       hammers: 2.0
       growth: 0.0
       happiness: 0.03
+      safety: 0.02
       beakers: 1.5
 
     - name: MESA_BRYCE
@@ -119,6 +116,7 @@ culture_biomes:
       hammers: 2.0
       growth: 0.5
       happiness: 0.01
+      safety: 0.02
       beakers: 0.25
 
     - name: MESA_PLATEAU
@@ -126,6 +124,7 @@ culture_biomes:
       hammers: 2.5
       growth: 0.0
       happiness: 0.01
+      safety: 0.02
       beakers: 0.25
 
     - name: MESA_PLATEAU_MOUNTAINS
@@ -133,6 +132,7 @@ culture_biomes:
       hammers: 3.0
       growth: 0.0
       happiness: 0.0
+      safety: 0.02
       beakers: 0.25
 
     - name: MESA_PLATEAU_FOREST_MOUNTAINS
@@ -140,6 +140,7 @@ culture_biomes:
       hammers: 3.0
       growth: 0.0
       happiness: 0.0
+      safety: 0.02
       beakers: 0.25
 
     - name: MESA_PLATEAU_FOREST
@@ -147,6 +148,7 @@ culture_biomes:
       hammers: 1.5
       growth: 1.0
       happiness: 0.02
+      safety: 0.02
       beakers: 0.5
 
     - name: DESERT
@@ -154,6 +156,7 @@ culture_biomes:
       hammers: 0.25
       growth: 1.0
       happiness: 0.03
+      safety: 0.02
       beakers: 1.0
     
     - name: FOREST
@@ -161,6 +164,7 @@ culture_biomes:
       hammers: 1.0
       growth: 1.25
       happiness: 0.025
+      safety: 0.02
       beakers: 0.5
 
     - name: FLOWER_FOREST
@@ -168,6 +172,7 @@ culture_biomes:
       hammers: 1.0
       growth: 1.0
       happiness: 0.05
+      safety: 0.02
       beakers: 0.75
 
     - name: BIRCH_FOREST
@@ -175,6 +180,7 @@ culture_biomes:
       hammers: 1.5
       growth: 0.75
       happiness: 0.025
+      safety: 0.02
       beakers: 0.5
 
     - name: BIRCH_FOREST_MOUNTAINS
@@ -182,6 +188,7 @@ culture_biomes:
       hammers: 2.5
       growth: 0.5
       happiness: 0.01
+      safety: 0.02
       beakers: 1.0
 
     - name: BIRCH_FOREST_HILLS_MOUNTAINS
@@ -189,6 +196,7 @@ culture_biomes:
       hammers: 1.5
       growth: 1.0
       happiness: 0.02
+      safety: 0.02
       beakers: 1.0
 
     - name: ROOFED_FOREST
@@ -196,6 +204,7 @@ culture_biomes:
       hammers: 1.0
       growth: 0.50
       happiness: 0.025
+      safety: 0.02
       beakers: 0.75
 
     - name: ROOFED_FOREST_MOUNTAINS
@@ -203,6 +212,7 @@ culture_biomes:
       hammers: 2.0
       growth: 2.0
       happiness: 0.0
+      safety: 0.02
       beakers: 0.5
     
     - name: TAIGA
@@ -210,6 +220,7 @@ culture_biomes:
       hammers: 2.0
       growth: 0.5
       happiness: 0.02
+      safety: 0.02
       beakers: 0.5
 
     - name: MEGA_TAIGA
@@ -217,6 +228,7 @@ culture_biomes:
       hammers: 1.5
       growth: 0.25
       happiness: 0.02
+      safety: 0.02
       beakers: 1.5
 
     - name: MEGA_SPRUCE_TAIGA
@@ -224,6 +236,7 @@ culture_biomes:
       hammers: 2.5
       growth: 0.25
       happiness: 0.01
+      safety: 0.02
       beakers: 0.25
 
     - name: MEGA_SPRUCE_TAIGA_HILLS
@@ -231,6 +244,7 @@ culture_biomes:
       hammers: 3.0
       growth: 0.0
       happiness: 0.03
+      safety: 0.02
       beakers: 0.5
 
     - name: COLD_TAIGA
@@ -238,6 +252,7 @@ culture_biomes:
       hammers: 1.0
       growth: 0.25
       happiness: 0.02
+      safety: 0.02
       beakers: 1.5
 
     - name: SWAMPLAND
@@ -245,6 +260,7 @@ culture_biomes:
       hammers: 0.25
       growth: 1.0
       happiness: 0.02
+      safety: 0.02
       beakers: 1.5
 
     - name: RIVER
@@ -252,6 +268,7 @@ culture_biomes:
       hammers: 1.5
       growth: 3.0
       happiness: 0.025
+      safety: 0.02
       beakers: 0.5
 
     - name: FROZEN_OCEAN
@@ -259,6 +276,7 @@ culture_biomes:
       hammers: 0.25
       growth: 0.0
       happiness: 0.0
+      safety: 0.02
       beakers: 3.0
 
     - name: FROZEN_RIVER
@@ -266,6 +284,7 @@ culture_biomes:
       hammers: 2.0
       growth: 2.5
       happiness: 0.015
+      safety: 0.02
       beakers: 1.0
 
     - name: ICE_PLAINS
@@ -273,6 +292,7 @@ culture_biomes:
       hammers: 1.0
       growth: 0.5
       happiness: 0.02
+      safety: 0.02
       beakers: 0.5
 
     - name: ICE_PLAINS_SPIKES
@@ -280,6 +300,7 @@ culture_biomes:
       hammers: 0.5
       growth: 0.0
       happiness: 0.03
+      safety: 0.02
       beakers: 3.0
 
     - name: JUNGLE_MOUNTAINS
@@ -287,6 +308,7 @@ culture_biomes:
       hammers: 3.0
       growth: 0.5
       happiness: 0.0
+      safety: 0.02
       beakers: 0.25
 
     - name: JUNGLE_EDGE_MOUNTAINS
@@ -294,6 +316,7 @@ culture_biomes:
       hammers: 2.0
       growth: 0.25
       happiness: 0.01
+      safety: 0.02
       beakers: 0.5
 
     - name: ICE_MOUNTAINS
@@ -301,6 +324,7 @@ culture_biomes:
       hammers: 2.0
       growth: 0.25
       happiness: 0.02
+      safety: 0.02
       beakers: 1.0
 
     - name: SAVANNA_MOUNTAINS
@@ -308,6 +332,7 @@ culture_biomes:
       hammers: 4.0
       growth: 0.25
       happiness: 0.0
+      safety: 0.02
       beakers: 0.25
 
     - name: SAVANNA_PLATEAU_MOUNTAINS
@@ -315,6 +340,7 @@ culture_biomes:
       hammers: 3.25
       growth: 0.5
       happiness: 0.0
+      safety: 0.02
       beakers: 0.0
 
     - name: TAIGA_MOUNTAINS
@@ -322,6 +348,7 @@ culture_biomes:
       hammers: 1.5
       growth: 0.5
       happiness: 0.03
+      safety: 0.02
       beakers: 1.0
 
     - name: COLD_TAIGA_MOUNTAINS
@@ -329,6 +356,7 @@ culture_biomes:
       hammers: 3.0
       growth: 0.0
       happiness: 0.0
+      safety: 0.02
       beakers: 1.0
 
     - name: SWAMPLAND_MOUNTAINS
@@ -336,6 +364,7 @@ culture_biomes:
       hammers: 2.5
       growth: 0.10
       happiness: 0.02
+      safety: 0.02
       beakers: 0.5
     
     - name: DESERT_MOUNTAINS
@@ -343,6 +372,7 @@ culture_biomes:
       hammers: 3.0
       growth: 0.0
       happiness: 0.01
+      safety: 0.02
       beakers: 1.0
 
     - name: SMALL_MOUNTAINS
@@ -350,6 +380,7 @@ culture_biomes:
       hammers: 2.5
       growth: 0.5
       happiness: 0.015
+      safety: 0.02
       beakers: 0.5
     
     - name: MUSHROOM_ISLAND
@@ -357,6 +388,7 @@ culture_biomes:
       hammers: 1.0
       growth: 0.5
       happiness: 0.03
+      safety: 0.02
       beakers: 0.5
     
     - name: MUSHROOM_SHORE
@@ -364,6 +396,7 @@ culture_biomes:
       hammers: 0.5
       growth: 0.25
       happiness: 0.05
+      safety: 0.02
       beakers: 0.5
 
     - name: BEACH
@@ -371,6 +404,7 @@ culture_biomes:
       hammers: 0.25
       growth: 0.5
       happiness: 0.06
+      safety: 0.02
       beakers: 1.5
 
     - name: STONE_BEACH
@@ -378,6 +412,7 @@ culture_biomes:
       hammers: 3.0
       growth: 0.0
       happiness: 0.015
+      safety: 0.02
       beakers: 0.15
 
     - name: COLD_BEACH
@@ -385,6 +420,7 @@ culture_biomes:
       hammers: 2.0
       growth: 0.0
       happiness: 0.01
+      safety: 0.02
       beakers: 1.0
 
     - name: DESERT_HILLS
@@ -392,6 +428,7 @@ culture_biomes:
       hammers: 2.0
       growth: 0.25
       happiness: 0.03
+      safety: 0.02
       beakers: 1.0
 
     - name: FOREST_HILLS
@@ -399,6 +436,7 @@ culture_biomes:
       hammers: 2.0
       growth: 0.25
       happiness: 0.03
+      safety: 0.02
       beakers: 1.0
 
     - name: BIRCH_FOREST_HILLS
@@ -406,6 +444,7 @@ culture_biomes:
       hammers: 2.0
       growth: 0.15
       happiness: 0.02
+      safety: 0.02
       beakers: 0.5
 
     - name: TAIGA_HILLS
@@ -413,6 +452,7 @@ culture_biomes:
       hammers: 2.5
       growth: 0.25
       happiness: 0.02
+      safety: 0.02
       beakers: 0.15
 
     - name: MEGA_TAIGA_HILLS
@@ -420,6 +460,7 @@ culture_biomes:
       hammers: 3.0
       growth: 0.1
       happiness: 0.0
+      safety: 0.02
       beakers: 0.1
 
     - name: COLD_TAIGA_HILLS
@@ -427,6 +468,7 @@ culture_biomes:
       hammers: 2.5
       growth: 0.15
       happiness: 0.02
+      safety: 0.02
       beakers: 0.25
     
     - name: EXTREME_HILLS
@@ -434,6 +476,7 @@ culture_biomes:
       hammers: 4.0
       growth: 0.0
       happiness: 0.0
+      safety: 0.02
       beakers: 0.15
 
     - name: EXTREME_HILLS_MOUNTAINS
@@ -441,6 +484,7 @@ culture_biomes:
       hammers: 4.0
       growth: 0.0
       happiness: 0.0
+      safety: 0.02
       beakers: 0.5
 
     - name: EXTREME_HILLS_PLUS
@@ -448,6 +492,7 @@ culture_biomes:
       hammers: 4.5
       growth: 0.0
       happiness: 0.0
+      safety: 0.02
       beakers: 0.0
 
     - name: EXTREME_HILLS_PLUS_MOUNTAINS
@@ -455,6 +500,7 @@ culture_biomes:
       hammers: 4.5
       growth: 0.0
       happiness: 0.0
+      safety: 0.02
       beakers: 0.5
 
     - name: JUNGLE
@@ -462,6 +508,7 @@ culture_biomes:
       hammers: 0.5
       growth: 1.0
       happiness: 0.02
+      safety: 0.02
       beakers: 1.0
 
     - name: JUNGLE_HILLS
@@ -469,6 +516,7 @@ culture_biomes:
       hammers: 2.0
       growth: 0.25
       happiness: 0.03
+      safety: 0.02
       beakers: 1.0
 
     - name: JUNGLE_EDGE
@@ -476,6 +524,7 @@ culture_biomes:
       hammers: 1.0
       growth: 0.5
       happiness: 0.03
+      safety: 0.02
       beakers: 1.0
 
     - name: UNKNOWN
@@ -483,8 +532,5 @@ culture_biomes:
       hammers: 0.0
       growth: 0.0
       happiness: 0.0
+      safety: 0.02
       beakers: 0.0
-
-
-
-
