--- a/data/camp.yml
+++ b/data/camp.yml
@@ -1,111 +1,71 @@
+#
+# Contains configuration options for camps.
+# 
 camp:
- # Number of hitpoints a camp has.
- hitpoints: 5000
- # Number of hitpoints to regenerate per second
- regen_rate: 2
- # Number of hours a camp can survive without coal.
- firepoints: 48
- # Number of coal it takes to revive one hour worth of camp life.
- coal_per_firepoint: 2
- # Template path to the camp. Starting from the templates directory.
- template: 'camp'
- # Sifter Settings
- sifter_gold_nugget_chance: 0.15
- sifter_iron_ingot_chance: 0.01
- # number of hours to let camp be raidable
- raid_length: 2
-#
+    # Number of hitpoints a camp has.
+    hitpoints: 5000
+  
+    # Number of hitpoints to regenerate per second
+    regen_rate: 2
+
+    # Number of hours a camp can survive without coal.
+    firepoints: 48
+
+    # Number of coal it takes to revive one hour worth
+    # of camp life.
+    coal_per_firepoint: 4
+
+    # Template path to the camp. Starting from the templates directory.
+    template: 'camp'
+
+    # cost of the camp in coins.
+    cost: 2500.0
+
+    # Sifter Settings
+    sifter_gold_nugget_chance: 0.10
+    sifter_iron_ingot_chance: 0.025
+   
+    # number of hours to let camp be raidable
+    raid_length: 2 
+
 longhouse_levels:
- - level: 1
-   consumes:
-     - 297,1
-   count: 4
-   coins: 25.0
-#
- - level: 1
-   consumes:
-     - 297,2
-   count: 7
-   coins: 40.0
-#
- - level: 3
-   consumes:
-     - 297,3
-   count: 12
-   coins: 75.0
-#
- - level: 4
-   consumes:
-     - 297,5
-   count: 18
-   coins: 135.0
-#
- - level: 5
-   consumes:
-     - 297,6
-     - 391,1
-     - 392,1
-   count: 24
-   coins: 250.0
-#
- - level: 6
-   consumes:
-     - 297,7
-     - 391,3
-     - 392,3
-   count: 36
-   coins: 325.0
-#
- - level: 7
-   consumes:
-     - 297,8
-     - 391,5
-     - 392,6
-   count: 48
-   coins: 400.0
-#
- - level: 8
-   consumes:
-     - 297,8
-     - 391,7
-     - 392,8
-   count: 60
-   coins: 475.0
-#
- - level: 9
-   consumes:
-     - 297,9
-     - 391,8
-     - 392,9
-   count: 72
-   coins: 550.0
-#
- - level: 10
-   consumes:
-     - 297,10
-     - 391,10
-     - 392,10
-   count: 96
-   coins: 675.0
-#
+   - level: 1
+     consumes:
+         - 297,1
+     count: 5
+     coins: 15.0
+   
+   - level: 2
+     consumes:
+         - 297,2
+     count: 10
+     coins: 40.0
+
+   - level: 3
+     consumes:
+         - 297,4
+     count: 15
+     coins: 80.0
+        
+   - level: 4
+     consumes:
+         - 297,7
+     count: 24
+     coins: 150.0
+     
 upgrades:
- - id: 'camp_upgrade_longhouse'
-   name: 'Enable Longhouse'
-   cost: 1000.0
-   action: 'enable_longhouse'
-   require_upgrade: 'camp_upgrade_garden'
- - id: 'camp_upgrade_garden'
-   name: 'Enable Garden'
-   cost: 1000.0
-   action: 'enable_garden'
-   require_upgrade:
- - id: 'camp_upgrade_sifter'
-   name: 'Enable Sifter'
-   cost: 1000.0
-   action: 'enable_sifter'
-   require_upgrade:
- - id: 'camp_upgrade_cooking_pot'
-   name: 'Enable Cooking Pot'
-   cost: 1000.0
-   action: 'enable_cooking_pot'
-   require_upgrade: 'camp_upgrade_garden'
+    - id: 'camp_upgrade_sifter'
+      name: 'Enable Sifter'
+      cost: 500.0
+      action: 'enable_sifter'
+      require_upgrade:
+    - id: 'camp_upgrade_longhouse'
+      name: 'Enable Longhouse'
+      cost: 500.0
+      action: 'enable_longhouse'
+      require_upgrade:
+    - id: 'camp_upgrade_garden'
+      name: 'Enable Garden'
+      cost: 500.0
+      action: 'enable_garden'
+      require_upgrade:
