--- a/data/fishing.yml
+++ b/data/fishing.yml
@@ -1,3 +1,11 @@
+# This controls the drops from fishing
+#
+#Here is an explaination of the options
+#craftMatId - Custom item_id
+#type_id - Vanilla item_id
+#drop_chance - Probability to drop.
+#
+
 fishing_drops:
     - craftMatId: 'mat_mercury'
       type_id: 0
