--- a/data/nocheat.yml
+++ b/data/nocheat.yml
@@ -1,7 +1,17 @@
+#
+# This configuration file holds information about our
+# nocheatplus settings/hooks. Some of these may be controlled by
+# nocheat, others may be custom anti-cheat measures implemented
+# directly into civcraft.
+
+# Anti-Cheat related permission nodes:
+# ac_valid - Player will always validate as using the anti-cheat
+# ac_exempt - Player will not be kicked during war if anti-cheat is not detected.
+
 nocheatplus:
    survivalfly:
       # Violation levels that we'll let 'slide' useful for iron armor speed dependencies.
-      violation_grace: 45
+      violation_grace: 30
 
 civcraft_ac_version: '1'
 civcraft_ac_key: 'FGAZFWAQ'
@@ -10,24 +20,27 @@ civcraft_ac_enabled: 'true'
 valid_mods:
     - name: 'CivCraft Anti-Cheat'
       checksums:
-        - '1495198275'
+        - '2428100271'
 
     - name: 'Forge Mod Loader'
       checksums: 
-        - '1998989615'
+        - '3682366158'
+        - '2157093643'
 
     - name: 'net.minecraft.client.main.Main'
       checksums: 
-        - '1243427875'
+        - '569927350'
 
     - name: 'Minecraft Forge'
       checksums: 
-        - '1998989615'
+        - '3682366158'
+        - '2157093643'
 
     - name: 'Optifine'
       checksums: 
-        - '1517681784'
-
+        - '193410396'
+        - '2942626117'
+    
     - name: 'ReiMinimap - Forge'
       checksums: 
         - '3522544750'
