--- a/data/randomevents.yml
+++ b/data/randomevents.yml
@@ -1,203 +1,213 @@
-# World Information
-max_x: 5000
-min_x: -5000
-max_z: 5000
-min_z: -5000
+#w
 #
+# This file allows us to configure random events on the server.
+#
+# The following limitations are being enforced to reduce complexity(for now):
+# - Random events can only have a SUCCESS or FAILURE state, not multiple options.
+# 
+
+# Here is an explaination of the various options
+# id - unquie ID for this event
+# chance - chance for event to occur, out of 1000. 100 = 10% chance.
+# name - display name for the event
+# message - message to display when event occurs.
+# length - amount of time in hours to complete the requirements
+# 
+# The following sections are lists of components. Each represent and AND relationship
+# this means all of them will be executed.
+#
+# actions - list of components that run when this event happens
+# requirements- list of requirements that ALL must be completed to count as successful.
+# success - list of components that run when this event is completed successfully
+# failure - list of components that run when this event is failed.
+#
+#
+# --- Components -----
+# Each component has its own set of properties that are important to it.
+# All component properties are strings and must have quotes around them.
+# All components have a 'name' which must be unquie.
+#
+# I'll attempt to document available components here:
+#
+# SpawnMobs - Spawns in mobs when activated. 
+#     where - location to spawn. Possibilities are TownChunk or CultureChunk
+#     what - Entity name of the mob to spawn.
+#     amount - Number of entities to spawn
+#     spread - how tightly packed they should be when spawned.
+# 
+# KillMobs - Listens on entity death. If its the right entity and the right town, it registers
+#     where: only register if entity is in this area.
+#     what: only check for this entity name;
+#     amount: total needed to be successful.
+#
+
+# World Information
+max_x: 6000
+min_x: -6000
+max_z: 6000
+min_z: -6000
+
 random_events:
-#========> Maintenence Events <========
- - id: 'event:slime_plague'
-   name: "Slime Plague"
-   chance: 50
-   message:
-     - "Holy moth balls! A Slime plague is threatening to destroy the town."
-     - "Slaughter 20 of them or suffer a happiness penalty!"
-   length: 48
-   actions:
-     - name: 'SpawnMobs'
-       where: 'TownChunk'
-       what: 'SLIME'
-       amount: '40'
-       spread: '100'
-   requirements:
-     - name: 'KillMobs'
-       where: 'TownChunk'
-       what: 'SLIME'
-       amount: '4'
-   success:
-   - name: 'MessageTown'
-     message: "We've cleared enough slime. We've averted the happiness penalty."
-   - name: 'GivePlatinum'
-     message: 'Saving the town, earning the %d!'
-   failure:
-   - name: 'MessageTown'
-     message: "Arg! Our people are terrified and scared! We suffer a happiness penalty"
-   - name: 'Unhappiness'
-     value: '3'
-     duration: '48'
-#========> Happiness Events <========
- - id: 'event:truffles'
-   name: 'Truffles!'
-   chance: 50
-   message:
-     - "Our local bakery has baked the best truffles of all the civilizations in the world!"
-     - "The residents think they are so good, that they are going to be extra happy for the next 3 days!"
-   length: 72
-   actions:
-     - name: 'Happiness'
-       value: '5'
-       duration: '72'
-   requirements:
-   success:
-   failure:
-   - name: 'MessageTown'
-     message: "Our local bakery stopped making those delicious truffles and residents are back to normal."
-#========> Hammer Events <========
- - id: 'event:productivity'
-   name: 'Productivity Soars!'
-   chance: 50
-   message:
-     - "Everyone in the town is working their hardest and feeling their best. Who said they could drink 5-Hour Energy..."
-     - "Due to carefully planning and skilled management, We've managed to increase the town's roductivity."
-     - "Our town is going to expreience increased hammer rates for the next 3 days!"
-   length: 72
-   actions:
-   - name: 'HammerRate'
-     value: '1.3'
-     duration: '72'
-   requirements:
-   success:
-   failure:
-   - name: 'MessageTown'
-     message: "The locals are burnt out. We no longer have our hammer boost."
-#========> Beaker Events <========
- - id: 'event:winery'
-   name: 'Winery'
-   chance: 50
-   message:
-     - "Our residents went on a wild goose chase to get our chickens back, and found some delicous purple water."
-     - "This magical liquid made them smarter, so your town will experience more beakers for the next 3 days!"
-   length: 72
-   actions:
-   - name: 'BeakerRate'
-     value: '1.3'
-     duration: '72'
-   requirements:
-   success:
-   failure:
-   - name: 'MessageTown'
-     message: "We found a well of water under your house, Sir Mayor! Time to drain it out."
-#========> Growth Events <========
- - id: 'event:drought'
-   name: 'Drought!'
-   chance: 40
-   message:
-     - "It has been WEEKS since it has rained! Your residents are starting to die of thirst! But wait, theres more."
-     - "Your crops are running out of water! Due to your town having to spare your water, you will experience less growth in the next 2 days."
-   length: 48
-   actions:
-   - name: 'GrowthRate'
-     value: '0.75'
-     duration: '48'
-   requirements:
-   success:
-   failure:
-   - name: 'MessageTown'
-     message: "We found a well of water under your house, Sir Mayor! Time to drain it out."
-#========> Money Events <========
- - id: 'event:gold_rush'
-   name: 'Gold Rush!'
-   chance: 25
-   message:
-     - "An ally of ours walked into our borders with a lot of gold. He told us he found the biggest gold mine in the world!"
-     - "We have sent your residents to try to collect the hidden stash of gold. You now need to go to and help them!"
-     - "The first person to break the block recieves the treasure. We have 12 hours to find this treasure!"
-   length: 12
-   actions:
-     - name: 'PickRandomBlock'
-       varname: 'loc'
-   requirements:
-     - name: 'BlockBreak'
-       varname: 'loc'
-       playername_var: 'player'
-   success:
-   - name: 'MessageTown'
-     message: "One of the town residents have found the cache of coins!"
-   - name: 'PayPlayer'
-     playername_var: 'player'
-     amount: '75000'
-   - name: 'GivePlatinum'
-     message: 'Great Success! %d for finding the coins!'
-   failure:
-   - name: 'MessageTown'
-     message: "We missed out on getting the treasure! Our enimes have stolen the 75,000 coins we could of gotten!"
+
+# ========= Maintenence Events =========
+
+    - id: 'event_slime_plague'
+      name: "Slime Plague"
+      chance: 50
+      message: 
+        - "Holy moth balls! A Slime plague is threatening to destroy the town." 
+        - "Slaughter 20 of them or suffer a happiness penalty!"
+      length: 48
+      actions:
+        - name: 'SpawnMobs'
+          where: 'TownChunk'
+          what: 'SLIME'
+          amount: '40'
+          spread: '100'
+      requirements:
+         - name: 'KillMobs'
+           where: 'TownChunk'
+           what: 'SLIME'
+           amount: '4'
+      success:
+         - name: 'MessageTown'
+           message: "We've cleared enough slime. We've averted the happiness penalty."
+         - name: 'GivePlatinum'
+           message: 'Saving the town, earning the %d!'
+      failure:
+         - name: 'MessageTown'
+           message: "Arg! Our people are terrified and scared! We suffer a happiness penalty"
+         - name: 'Unhappiness'
+           value: '3'
+           duration: '48'
 
 # ====== Events that Just kinda happen ============
-#Happiness Events
-
-# - id: 'event:dispute'
-#   name: 'Land Dispute'
-#   chance: 50
-#   message:
-#     - "Two local residents are having a dispute over their property boundaries. The two have managed to"
-#     - "divide the town into two seperate factions, both accusing the other of side of being land thieves."
-#     - "The only way to end the in-fighting is to lay down the heavy hand of the law. Which invariably steps"
-#    - "on peoples toes. Causing unhappiness for the next 3 days."
-#   length: 72
-#   actions:
-#     - name: 'Unhappiness'
-#       value: '5'
-#       duration: '72'
-#   requirements:
-#   success:
-#   failure:
-#   - name: 'MessageTown'
-#        message: "The locals have finally gotten over the silly land dispute and are now going back to their lives as normal"
-
-# Hammer Events
-
-# - id: 'event:lazy'
-#   name: 'Lazyiness'
-#   chance: 50
-#   message:
-#     - "An air of laziness has struck the town. People just aren't working as hard as they used to."
-#     - "They'd rather relax and drink iced tea in the afternoons. We'll have to crack the whip to get them back to work!"
-#     - "Our town is going to experience decreasted hammer rates for the next 3 days."
-#   length: 72
-#   actions:
-#   - name: 'HammerRate'
-#        value: '0.70'
-#        duration: '72'
-#   requirements:
-#   success:
-#   failure:
-#   - name: 'MessageTown'
-#        message: "The locals are finally back to work. Our hammer rates have returned to normal."
+    # Happiness Events
+    - id: 'event_truffles'
+      name: 'Truffles!'
+      chance: 50
+      message:
+        - "Our local bakery have made some of the best truffles in all of CivCraft!"
+        - "Since they're so good, our people are going to be happier for the next 3 days!"
+      length: 72
+      actions:
+        - name: 'Happiness'
+          value: '5'
+          duration: '72'
+      requirements:
+      success:
+      failure:
+         - name: 'MessageTown'
+           message: "The happiness we've been getting from our truffles has expired. It's yesterday's jam."
+    
+#    - id: 'event_dispute'
+#      name: 'Land Dispute'
+#      chance: 50
+#      message:
+#        - "Two local residents are having a dispute over their property boundaries. The two have managed to"
+#        - "divide the town into two seperate factions, both accusing the other of side of being land thieves."
+#        - "The only way to end the in-fighting is to lay down the heavy hand of the law. Which invariably steps"
+#       - "on peoples toes. Causing unhappiness for the next 3 days."
+#      length: 72
+#      actions:
+#        - name: 'Unhappiness'
+#          value: '5'
+#          duration: '72'
+#      requirements:
+#      success:
+#      failure:
+#         - name: 'MessageTown'
+#           message: "The locals have finally gotten over the silly land dispute and are now going back to their lives as normal"
+      
+    # Hammer Events
+    - id: 'event_productivity'
+      name: 'Productivity Soars!'
+      chance: 50
+      message:
+        - "The streets are bustling with activity! Everyone in the town is doing their best and working their hardest."
+        - "Due to carefully planning and skilled management. We've managed to increase the productivity in our town."
+        - "Our town is going to expreience increased hammer rates for the next 3 days!"
+      length: 72
+      actions:
+         - name: 'HammerRate'
+           value: '1.5'
+           duration: '72'
+      requirements:
+      success:
+      failure:
+         - name: 'MessageTown'
+           message: "The locals are burnt out and we're no longer getting our hammer bonus."
+      
+#    - id: 'event_lazy'
+#      name: 'Lazyiness'
+#      chance: 50
+#      message:
+#        - "An air of laziness has struck the town. People just aren't working as hard as they used to."
+#        - "They'd rather relax and drink iced tea in the afternoons. We'll have to crack the whip to get them back to work!"
+#        - "Our town is going to experience decreasted hammer rates for the next 3 days."
+#      length: 72
+#      actions:
+#         - name: 'HammerRate'
+#           value: '0.70'
+#           duration: '72'
+#      requirements:
+#      success:
+#      failure:
+#         - name: 'MessageTown'
+#           message: "The locals are finally back to work. Our hammer rates have returned to normal."
 
 # ========== Opportunities ============
 
- - id: 'event:herbs'
-   name: 'Herbs'
-   chance: 50
-   message:
-     - "Our medical scientists think they might be able to cure one of the many annoying illnesses that have"
-     - "plauged our civlization for so long. If we're able to retrieve the right herbs our scientists will have"
-     - "a chance to cure it, giving our town a happiness boost. We have 8 hours to find the herbs."
-   length: 8
-   actions:
-     - name: 'PickRandomLocation'
-       varname: 'loc'
-   requirements:
-     - name: 'LocationCheck'
-       varname: 'loc'
-   success:
-   - name: 'MessageTown'
-     message: "We've found the herbs! The people rejoice!"
-   - name: 'Happiness'
-     value: '5'
-     duration: '120'
-   - name: 'GivePlatinum'
-     message: 'Finding the herbs has earned you %d'
-   failure:
-   - name: 'MessageTown'
-     message: "We couldn't find the herbs in time!"
+    - id: 'event_herbs'
+      name: 'Herbs'
+      chance: 50
+      message:
+        - "Our medical scientists think they might be able to cure one of the many annoying illnesses that have"
+        - "plauged our civlization for so long. If we're able to retrieve the right herbs our scientists will have"
+        - "a chance to cure it, giving our town a happiness boost. We have 8 hours to find the herbs."
+      length: 8
+      actions:
+        - name: 'PickRandomLocation'
+          varname: 'loc'
+      requirements:
+        - name: 'LocationCheck'
+          varname: 'loc'
+      success:
+         - name: 'MessageTown'
+           message: "We've found the herbs! The people rejoice!"
+         - name: 'Happiness'
+           value: '5'
+           duration: '120'
+         - name: 'GivePlatinum'
+           message: 'Finding the herbs has earned you %d'
+      failure:
+         - name: 'MessageTown'
+           message: "We couldn't find the herbs in time!"
+ 
+    - id: 'event_gold_rush'
+      name: 'Gold Rush!'
+      chance: 50
+      message:
+        - "There is a rumor going around the town that there is a large cache of coins, hidden somewhere out in"
+        - "the world. If we can find the block it's hidden in and break it, we'll be able to collect a massive"
+        - "reward! The first person to break the block recieves a reward. We have 12 hours to find the coins."
+      length: 12
+      actions:
+        - name: 'PickRandomBlock'
+          varname: 'loc'
+      requirements:
+        - name: 'BlockBreak'
+          varname: 'loc'
+          playername_var: 'player'
+      success:
+         - name: 'MessageTown'
+           message: "One of the town residents have found the cache of coins!"
+         - name: 'PayPlayer'
+           playername_var: 'player'
+           amount: '75000'
+         - name: 'GivePlatinum'
+           message: 'Great Success! %d for finding the coins!'
+      failure:
+         - name: 'MessageTown'
+           message: "We couldn't find the coins in time!"
+        
