--- a/.classpath
+++ b/.classpath
@@ -2,22 +2,24 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/bonecp-0.8.0.RELEASE.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/bukkit-1.8.5-R0.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/craftbukkit-1.8.5-R0.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/dhutils.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/guava-15.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/json.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/mockito-all-1.9.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/NoCheatPlus.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/slf4j-api-1.7.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/slf4j-simple-1.7.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/spigot-1.8.5-R0.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/VanishNoPacket.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/Vault.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/zStuff/zunused/civmob/jars/WorldBorder.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/Coding/phase3/jars/CivCraft-MobLib-1.8.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/bonecp-0.8.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/bukkit-1.8.8-R0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/CivCraft-MobLib-1.8.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/craftbukkit-1.8.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/dhutils.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/guava-15.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/HeroChat.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/json.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/mockito-all-1.9.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/NoCheatPlus.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/slf4j-simple-1.7.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/spigot-1.8.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/TagAPI.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/VanishNoPacket.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/Vault.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/phase3/jars/WorldBorder.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
