--- a/.classpath
+++ b/.classpath
@@ -12,11 +12,11 @@
 	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/round3/jars/json.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/round3/jars/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/round3/jars/mockito-all-1.9.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/round3/jars/NameTags1.8.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/round3/jars/NoCheatPlus.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/round3/jars/slf4j-api-1.7.5.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/round3/jars/slf4j-simple-1.7.5.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/round3/jars/spigot-1.8.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/round3/jars/TagAPI.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/round3/jars/VanishNoPacket.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/round3/jars/Vault.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Cole/Desktop/Folder/1This Is Organized/Minecraft/Coding Libraries/round3/jars/WorldBorder.jar"/>
