--- a/src/config.yml
+++ b/src/config.yml
@@ -1,66 +1,39 @@
-# ======================================================================
-# CivCraft Configuration File.
-# ======================================================================
-
-
-# =========================== civcraft.net Server Listing Service (SLS) =========================
-
-# Set if you want to use civcraft.net's server listing service (SLS). By setting this to true
-# the civcraft plugin will send your server's information to civcraft.net so players can find
-# your server while looking for civcraft servers to play on.
+#========== civcraft.net Server Listing Service (SLS) ==========#
 use_server_listing_service: 'true'
-
-# IP address or URL of your server. The SLS will use this to inform users how to connect to your server.
-# if left blank, the SLS will attempt to obtain it automatically from packets sent to the SLS.
-server_address: ""
-
-# Name of your server which will appear on civcraft.net, will be clipped to 64 characters.
-server_name: 'CivCraft'
-
-# Timezone hint that will tell users what timezone your server is in. This will help them join
-# servers that are in their own timezone.
-server_timezone: 'PST'
-
-# A short message to display on civcraft.net to advertise your server or explain what it's about.
-server_description: 'Just another CivCraft server.'
-
-# Prints a message to the console for every heartbeat packet sent to the server. Useful for debugging.
+#
+server_address: "Your IP Here"
+server_address_url: 'To A Website'
+server_address_url_description: 'Description When Someone Hovers The Link'
+#
+server_name: 'Your Server Name'
+server_name_url: 'To A Website'
+server_name_url_description: 'Description When Someone Hovers The Link'
+#
+server_timezone: 'CST'
+#
+server_description: 'Anything you want!'
+#
 debug_heartbeat: 'false'
-
-# ============================== Database Configuration ====================================
-
-# MySQL database to store game data in across reloads. 
+#=============== Database Configuration ===============#
 mysql:
    hostname: localhost
    port: '3306'
-   database: 
-   username: 
-   password: 
-   table_prefix: 
+   database: 'game'
+   username: root
+   password: 1234
+   table_prefix: ''
    min_conns: '5'
    max_conns: '10'
    parts: '3'
-   
+#
 global_database:
-    database: 
-    hostname:
+    database: 'global'
+    hostname: localhost
     port: '3306'
-    username:
-    password:
+    username: 'root'
+    password: 1234
     min_conns: '5'
     max_conns: '10'
     parts: '3'
-    
-perk_database:
-    database: 
-    hostname:
-    port: '3306'
-    username:
-    password:
-    min_conns: '5'
-    max_conns: '10'
-    parts: '3'
-
-server_phase: 'beta8'
-
- 
+#
+server_phase: 'TestServer'
