--- a/data/structures.yml
+++ b/data/structures.yml
@@ -1,11 +1,17 @@
-# 
-# This config file contains all of the definitions for all of the
-# structures as well as some specific structure related configuration options.
-#
-
 ################ Bank Settings ################
 #TODO add bank config options
 
+################# Quarry Settings #############
+quarry:
+    max: 100000
+    cobblestone_rate: 0.85
+    coal_rate: 0.1
+    iron_rate: 0.06
+    gold_rate: 0.03
+    redstone_rate: 0.008
+    diamond_rate: 0.0025
+    despotism_rate: 2.0
+    penalty_rate: 0.85
 ################# Trommel Settings #############
 trommel:
     iron_chance: 0.04
@@ -15,7 +21,7 @@ trommel:
     chromium_chance: 0.0008
     gravel_rate: 1
     despotism_rate: 2.0
-    penalty_rate: 0.8
+    penalty_rate: 0.85
 
 ################ Grocer Settings ###############
 grocer_levels:
@@ -113,33 +119,115 @@ temple:
         - entities:
               - 'sheep'
           reward: 50
-############################### Mine Settings #################
+#=======================================================#
+#==================> Monument Levels <==================#
+#=======================================================#
+monument_levels:
+    - level: 1
+      culture: 2.0
+      amount: 2
+      count: 24
+#
+    - level: 2
+      culture: 4.0
+      amount: 3
+      count: 48
+#
+    - level: 3
+      culture: 6.0
+      amount: 4
+      count: 72
+#
+    - level: 4
+      culture: 8.0
+      amount: 5
+      count: 96
+#
+    - level: 5
+      culture: 10.0
+      amount: 7
+      count: 120
+#
+    - level: 6
+      culture: 12.0
+      amount: 8
+      count: 144
+#
+    - level: 7
+      culture: 14.0
+      amount: 9
+      count: 168
+#
+    - level: 8
+      culture: 16.0
+      amount: 10
+      count: 192
+#
+    - level: 9
+      culture: 18.0
+      amount: 12
+      count: 216
+#
+    - level: 10
+      culture: 18.0
+      amount: 14
+      count: 240
+#=======================================================#
+#====================> Mine Levels <====================#
+#=======================================================#
 mine_levels:
     - level: 1
-      hammers: 100.00
-      amount: 10
+      hammers: 100.0
+      amount: 2
       count: 24
-   
+#
     - level: 2
-      hammers: 150.00
-      amount: 15
+      hammers: 125.0
+      amount: 4
       count: 48
-    
+#
     - level: 3
-      hammers: 200.00
-      amount: 20
-      count: 96
-    
+      hammers: 150.0
+      amount: 6
+      count: 72
+#
     - level: 4
-      hammers: 250.00
-      amount: 25
-      count: 120
-    
+      hammers: 200.0
+      amount: 9
+      count: 96
+#
     - level: 5
-      hammers: 300.00
-      amount: 30
+      hammers: 225.0
+      amount: 11
+      count: 120
+#
+    - level: 6
+      hammers: 250.0
+      amount: 13
       count: 144
-##################### Farm Settings ##########################
+#
+    - level: 7
+      hammers: 300.0
+      amount: 16
+      count: 168
+#
+    - level: 8
+      hammers: 325.0
+      amount: 18
+      count: 192
+#
+    - level: 9
+      hammers: 350.0
+      amount: 20
+      count: 216
+#
+    - level: 10
+      hammers: 400.0
+      amount: 24
+      count: 240
+#=======================================================#
+#====================> Farm Levels <====================#
+#=======================================================#
 farm:
     # Number of crops that will grow per 100% of growth rate.
     grows_per_tick: 6
@@ -303,6 +391,24 @@ road:
 #      (... can contain as many signs as needed)
       
 structures:
+  - id: s_quarry
+    template: fish_hatchery
+    template_y_shift: 0
+    displayName: Quarry
+    require_upgrade:
+    require_tech: 'tech_mining'
+    effect_event: 
+    check_event: 
+    update_event: quarry_process
+    onBuild_event:
+    limit: 0
+    allow_outside_town: true
+    cost: 5000.0
+    upkeep: 1000.0
+    hammer_cost: 800.0
+    points: 1500
+    max_hitpoints: 200
+
   - id: s_townhall
     template: town_hall
     template_y_shift: 0
@@ -310,7 +416,7 @@ structures:
     require_tech:
     require_upgrade:
     check_event:
-    effect_event: generate_culture:25
+    effect_event: generate_culture:1
     update_event:
     onBuild_event:
     limit: 2
@@ -325,7 +431,7 @@ structures:
         - name: 'AttributeStatic'
           type: 'direct'
           attribute: 'CULTURE'
-          value: '25.0'
+          value: '1.0'
   
   - id: s_capitol
     template: capital #XXX misspelt =( but its easier to leave it that way.
@@ -334,7 +440,7 @@ structures:
     require_tech:
     require_upgrade:
     check_event:
-    effect_event: generate_culture:50
+    effect_event: generate_culture:2
     update_event:
     onBuild_event:
     limit: 2
@@ -349,7 +455,7 @@ structures:
         - name: 'AttributeStatic'
           type: 'direct'
           attribute: 'CULTURE'
-          value: '50.0'
+          value: '2.0'
 
   - id: s_bank
     template: bank
@@ -524,11 +630,11 @@ structures:
   
   - id: s_monument
     template: monument
-    template_y_shift: -2
+    template_y_shift: -1
     displayName: Monument
     require_upgrade:
     require_tech: 'tech_religion'
-    effect_event: generate_culture:400
+    effect_event:
     check_event: 
     update_event: 
     onBuild_event:
@@ -546,7 +652,7 @@ structures:
         - name: 'AttributeStatic'
           type: 'direct'
           attribute: 'CULTURE'
-          value: '200.0'
+          value: '2.0'
   
   - id: s_temple
     template: temple
@@ -568,7 +674,7 @@ structures:
         - name: 'AttributeStatic'
           type: 'direct'
           attribute: 'CULTURE'
-          value: '100.0'
+          value: '2.0'
         - name: 'AttributeStatic'
           type: 'direct'
           attribute: 'HAPPINESS'
@@ -822,7 +928,7 @@ structures:
     allow_outside_town: false
     components:
         - name: 'AttributeWarUnhappiness'
-          value: '-3.0'
+          value: '-2.0'
   
   - id: ti_windmill
     template: windmill
